Change path img pokemon

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 id="secondColumn">
                 <h1 class="mt-5 fs-1 mb-5 text-white" id="titleMain">Pokedex Launch-X</h1>
                 <input type="text" placeholder="Nombre o número del pokemon" id="pokeName" name="pokeName" class="w-75 text-center fs-3 mb-3"><br>
-                <img src="/assets/other/poke.png" class="shadow card border border-5 rounded-3" alt="pokemon" width="300px" id="pokeImg"><br><br>
+                <img src="./assets/other/poke.png" class="shadow card border border-5 rounded-3" alt="pokemon" width="300px" id="pokeImg"><br><br>
                 <input type="text" name="namePokemon" readonly id="namePokemon" placeholder="Nombre del pokemon" 
                 class=" border-0 fs-1 text-center fw-bold mb-3"><br>
                 <button onclick="fetchPokemon()" class="btn btn-secondary fs-3 mb-5" id="searchPoke" name="searchPoke">Buscar pokemon</button>
